--- a/ExcelCalculate/main/templates/main/index_init.html
+++ b/ExcelCalculate/main/templates/main/index_init.html
@@ -18,9 +18,6 @@
             margin-top: 20px;
             margin-bottom: 50px;
         }
-        .toDoDiv{
-
-        }
         .custom-btn{
             font-size: 10px;
         }
@@ -41,10 +38,11 @@
         </div>
         <div class="content">
             <div class="fileInputDiv">
-                <form action="" method="POST" enctype="multipart/form-data">{% csrf_token %}
+                <form action="" method="POST">{% csrf_token %}
                     <div class="input-group">
                         하단 버튼을 통해 파일을 업로드 해주세요.(.xls 확장자의 파일만 가능합니다.)<br>
                         <input id="fileInput" name="fileInput" type="file" class="form-control">
+                        <input type="submit" class="btn btn-success btn-lg" value="파일 제출">
                     </div>
                 </form>
             </div>
