login encryption finish

--- a/ExcelCalculate/main/templates/main/loginFail.html
+++ b/ExcelCalculate/main/templates/main/loginFail.html
@@ -11,22 +11,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 
     <style>
-        .content{
-            height: 75%;
-        }
-        .messageDiv{
-            margin-top: 20px;
-            margin-bottom: 50px;
-        }
-        .custom-btn{
-            font-size: 10px;
-        }
         .panel-footer{
             height:10%;
             color:gray;
         }
     </style>
-
     <title>Excel Calculate</title>
 </head>
 <body>
@@ -38,10 +27,9 @@
             </div>
         </div>
         <div class='body'>
-            <div class="resultDiv">
-                <h3> * Excel 결과 확인 *</h3>
-            </div>
-            <hr>
+            <h1>로그인 실패</h1>
+            <h4>아이디 또는 비밀번호가 틀렸습니다. 로그인을 다시 시도해주세요.</h4>
+            <a href="/signin" class="btn btn-success btn-xs" style="margin: 10px">로그인 하기</a>
         </div>
         <div class="panel-footer">
             실전예제로 배우는 Django. Project3-ExcelCalculate
