--- a/ExcelCalculate/main/templates/main/result.html
+++ b/ExcelCalculate/main/templates/main/result.html
@@ -40,9 +40,22 @@
         <div class='body'>
             <div class="resultDiv">
                 <h3> * Excel 결과 확인 *</h3>
+                <h4> - grade별 최소값, 최대값, 평균값</h4>
+                {% for key,value in grade_calculate_dic.items %}
+                    <h5>GRADE: {{ key }}</h5>
+                    <p><strong>최소값: </strong>{{ value.min }}</p>
+                    <p><strong>최대값: </strong>{{ value.max }}</p>
+                    <p><strong>평균값: </strong>{{ value.avg }}</p>
+                    <br>
+                {% endfor %}
+                <br>
+                <h4> - 이메일별 주소 도메인 인원</h4>
+                {% for key,value in email_domain_dic.items %}
+                    <p><strong>{{ key }}: </strong>{{ value }}명</p>
+                {% endfor %}
+                <br>
             </div>
             <hr>
-        </div>
         </div>
         <div class="panel-footer">
             실전예제로 배우는 Django. Project3-ExcelCalculate
